# test

./: README.md
destop/: CMakeLists.txt  desktop.cpp  test.sh
dpkg/: CMakeLists.txt  dpkg.cpp  test.sh
permutation/src/: CMakeLists.txt  exam-1.h  exam.h  main.cpp  per.cpp
tree/src/: CMakeLists.txt  exam.h  main.cpp
tt/: CMakeLists.txt  main.cpp
